--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("null.css");
+
+
+* {
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App, #root, body{
+    display: flex;
+    flex: 1;
+    background-color: #f7e018;
+    flex-direction: row;   
+    justify-content: flex-end;
+    overflow: hidden;
+    user-select: none;
+}
+
+.logo{
+    position: absolute;
+    border: none;
+    align-self: flex-end;
+    justify-self: flex-end;
+    width: 25em;
+
+}
+
+.blue{
+    color: #569cd6;
+}
+
+.bracket {
+    color: #f7e018;
+}
+
+.letter{
+    color: #24bfa5;
+}
+
+.wrap {
+    z-index: 50;
+    align-self: center;
+    justify-self: center;
+    background-color: #fff;
+    padding: 30px 45px;
+    width: 900px;
+    transition-duration: 0.4s;
+    /*border-right: 10px solid #000000;*/
+    box-shadow: rgba(0, 0, 0, 0.07) 0 1px 2px, rgba(0, 0, 0, 0.07) 0 2px 4px, rgba(0, 0, 0, 0.07) 0 4px 8px, rgba(0, 0, 0, 0.07) 0 8px 16px, rgba(0, 0, 0, 0.07) 0 16px 32px, rgba(0, 0, 0, 0.07) 0 32px 64px;
+}
+
+.container{
+    z-index: 40;
+    display: flex;
+    flex: 1;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+}
+@media screen and (max-width: 680px) {
+    .wrap {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex: 1;
+        width: 100%;
+        height: 100%;
+    }
 }
