--- a/src/index.css
+++ b/src/index.css
@@ -48,9 +48,8 @@ body::-webkit-scrollbar{
     padding: 30px 45px;
     width: 900px;
     transition-duration: 0.4s;
-    max-height: 650px;
+    max-height: 670px;
     overflow-x: hidden;
-    /*border-right: 10px solid #000000;*/
     box-shadow: rgba(0, 0, 0, 0.07) 0 1px 2px, rgba(0, 0, 0, 0.07) 0 2px 4px, rgba(0, 0, 0, 0.07) 0 4px 8px, rgba(0, 0, 0, 0.07) 0 8px 16px, rgba(0, 0, 0, 0.07) 0 16px 32px, rgba(0, 0, 0, 0.07) 0 32px 64px;
 }
 
@@ -73,7 +72,7 @@ body::-webkit-scrollbar{
     justify-content: center;
     align-items: center;
 }
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 900px) {
     .wrap {
         display: flex;
         flex-direction: column;
@@ -81,12 +80,6 @@ body::-webkit-scrollbar{
         flex: 1;
         width: 100%;
         height: 100%;
-    }
-}
-@media screen and (max-width: 980px) {
-    .wrap {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        max-height: none;
     }
 }
